@@ -66,7 +66,7 @@ public class Thief_PetSteal extends ThiefSkill
 	@Override
 	public int classificationCode()
 	{
-		return Ability.ACODE_CHANT | Ability.DOMAIN_ANIMALAFFINITY;
+		return Ability.ACODE_THIEF_SKILL | Ability.DOMAIN_ANIMALAFFINITY;
 	}
 
 	@Override
