@@ -84,7 +84,7 @@ public class Thief_Plunder extends ThiefSkill
 	@Override
 	public int classificationCode()
 	{
-		return Ability.ACODE_SKILL | Ability.DOMAIN_STEALING;
+		return Ability.ACODE_THIEF_SKILL | Ability.DOMAIN_STEALING;
 	}
 
 	@Override
