@@ -522,6 +522,20 @@ when either above or beneath the waves, the Mer is an unstoppable force.  Groupi
 with others on land and taking charge of the situation when the waves roll in \
 is the way for a Mer Druid to flourish.
 
+PIRATE=<CHARCLASS>\
+The Pirate is a rogue and scourge of the high seas, a master of ship combat, and \
+ruthless to those who refuse to surrender their booty. The Pirate is most suited for \
+combat from the deck of huge sailing ships, being able to get the most out of \
+their ship, their weapons, and their landlubber contacts.  Their brutal lifestyle \
+even gives them combat bonuses with fake limbs.  However, Pirates also get harsher \
+treatment from the law, and are so greedy for gold that they can literally be paid \
+to walk away from combat.\n\r\
+\n\r\n\r\
+How to play: The Pirate is a middlin' fair rogue on the land, and can survive well \
+enough among landlubbers, but absolutely excels in command of a ship in pursuit of \
+weak seabound targets.  Clans would do well to keep a former-independent Pirate \
+around to captain their ships for when the real ones come calling.
+
 DELVER=<CHARCLASS>\
 The Delver is a stolid druid of caves and the underdark, being the guardian of \
 the rocks and stone and the cold caverns of the deep.  The Delver is unconcerned \
