@@ -41,6 +41,7 @@
   40. New Thief/Sailor Skills: Pirate Familiar, Pub Contacts, Combat Repairs, Foul Weather Sailing
   41. New Thief/Sailor Skills: Pay Off, Pet Steal, Merchant Flag, Pieces of Eight, Articles
   42. New Thief/Sailor Skills: Ramming Speed, Smuggler's Hold, Hide Ship, Intercept Ship, Await Ship
+  43. New Thief/Sailor Skills: Mast Shot, Warning Shot, Silent Running
   
 # Build 5.9.3 Released 05/08/2016
    1. Follower behavior now has a few more options.
